# metatrait

./: Cargo.toml  README.md
examples/: phantoms.rs  stack.rs
src/: base.rs  cat.rs  existence.rs  functional.rs  lib.rs  linked.rs  traits.rs
src/base/: functor.rs  morphism.rs
src/base/instances/: option.rs  result.rs
src/cat/: functor.rs  instances.rs  morphism.rs  util.rs
src/cat/instances/: base.rs  composition.rs  either.rs  futures.rs  lazy.rs  option.rs  result.rs  verbatim.rs
src/functional/instances/: composition.rs  futures.rs  lazy.rs  verbatim.rs
src/linked/: functional.rs  traits.rs
src/linked/functional/: instances.rs
src/linked/functional/instances/: composition.rs  futures.rs  lazy.rs  verbatim.rs
src/linked/traits/: empty.rs  future.rs  is.rs  to.rs
src/traits/: base.rs  either.rs  empty.rs  future.rs  is.rs  to.rs  unit.rs
