[package]
name = "metatrait"
version = "0.0.0-alpha.0"
edition = "2021"
rust-version = "1.80"
publish = true
description = "RPITIT Monads"
documentation = "https://docs.rs/metatrait"
keywords = ["async"]
categories = ["asynchronous"]
readme = "README.md"
license = "MIT OR Apache-2.0"
repository = "https://github.com/parrrate/metatrait"
authors = [
    "Alisa Feistel <alisafeistel@gmail.com>",
    "T.A. Prikhodko <tim@ongoteam.yaconnect.com>",
]

[dependencies]
either = "1.13.0"
futures = { version = "0.3.30", optional = true }
ghost = "0.1.17"
pin-project = { version = "1.1.5", optional = true }

[features]
default = ["futures"]
futures = ["dep:futures", "dep:pin-project"]
